--- a/README
+++ b/README
@@ -1,51 +1,63 @@
-SchemaObject v0.5  
-+++++++++++++++++
+SchemaObject v0.5.1 documentation 
++++++++++++++++++++++++++++++++++
 
-Introduction
-============
-SchemaObject creates an object representation of a MySQL schema including its databases, tables, columns, indexes, and foreign keys. It allows you to process and iterate over a MySQL schema through python object properties and methods.
+SchemaObject provides a simple, easy to use Python object interface to a MySQL database schema. You can effortlessly write tools to test, validate, sync, migrate, or manage your schema as well as generate the SQL necessary to make changes to the it. 
 
-You can generate the SQL syntax for creating, altering and dropping any part of the schema. As of v0.5, a separate process is needed to push any generated changes to your database instance/schema. 
-
-Dependancies and Requirements
-=============================
-* Python 2.5
-* MySQLdb
-
-
-Installing with easy_install
-============================
-
-    sudo easy_install schemaobject
-
-Installing the latest development version
-=========================================
-
-    $ git clone git://github.com/mmatuson/SchemaObject.git
-    $ cd schemaobject
-    $ sudo python setup.py develop
-    
-    *OR* 
-    
-    $ sudo python setup.py develop
-    
-Documentation
-=============
-Documentation is available @ http://matuson.com/code/schemaobject
-
-
-Examples
-========
-Verify all tables in our database are InnoDB::
-    
+Example 1: Verify all tables are InnoDB
+---------------------------------------
     import schemaobject
     schema  = schemaobject.SchemaObject('mysql://username:password@localhost:3306/mydb')
     tables = schema.databases['mydb'].tables #or schema.selected.tables
     for t in tables:
         assert tables[t].options['engine'].value == 'InnoDB'
-        
-Verify our MySQL instance is version 5.x+::
 
+
+Example 2: Verify our MySQL instance is at least version 5.1
+------------------------------------------------------------
     import schemaobject
     schema  = schemaobject.SchemaObject('mysql://username:password@localhost:3306/mydb')
-    assert int(schema.version[:1]) >= 5 #test against the major # of the version string
+    assert schema.version >= '5.1.0'
+        
+        
+Notes and Limitations
+---------------------
+* SchemaObject instances are read-only. Modifying the object or calling create(), modify(), alter(), or drop() will not change your schema. 
+* The MySQL User needs to have privileges to execute SELECT and SHOW statements, as well as access the INFORMATION_SCHEMA. 
+* All Databases, Tables, Columns, Indexes, and Foreign Keys are lazily loaded.
+* SchemaObject does not load Events, Triggers, or Stored Procedures.
+
+
+Download and Install
+====================
+
+Prerequisites
+-------------
+* SchemaObject has been tested against Python 2.4, 2.5, and 2.6.
+* To use SchemaObject, you need to have MySQL <http://www.mysql.com/>, version 5.0 or higher and MySQLdb <http://sourceforge.net/projects/mysql-python>, version 1.2.1p2 or higher installed. 
+* To run the test suite, you need to install a copy of the Sakila Database <http://dev.mysql.com/doc/sakila/en/sakila.html>, version 0.8
+
+
+Installing with easy_install
+----------------------------
+    sudo easy_install schemaobject
+
+Installing the latest development version
+-----------------------------------------
+    git clone git://github.com/mmatuson/SchemaObject.git
+    cd schemaobject
+    sudo python setup.py install
+
+
+Documentation
+=============
+Documentation is available @ http://matuson.com/code/schemaobject/
+    
+Status & License
+================
+SchemaObject is under active development and released under the Apache License, Version 2.0 <http://www.apache.org/licenses/LICENSE-2.0>. 
+
+You can obtain a copy of the latest source code from the Git repository <http://github.com/mmatuson/SchemaObject>, or fork it on Github <http://www.github.com>.
+
+You can report bugs via the SchemaObject Issues page <http://github.com/mmatuson/SchemaObject/issues>
+
+Comments, questions, and feature requests can be sent to code at matuson dot com
