fixed column bugs with DEFAULT, CHARSET, COLLATE, and definition syntax (0.5.2)

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,10 @@
+== 0.5.2 / 2009-12-02
+    * Column DEFAULT fixes
+        - strings are now quoted (except CURRENT_TIMESTAMP),
+        - non-None values handled ('', 0)
+    * CHARACTER SET AND COLLATE omitted from column definition if same as parent Table.
+    * Fixed Column definition syntax (ordering of attributes)
+
 == 0.5.1 / 2009-11-10
     * bug fixes
     * updated test configuration, added more tests
@@ -11,6 +18,6 @@
     * Changed DatabaseConnection to explicitly require a call to connect()
     * backported to work with python 2.4
     * schema name dropped from table.alter() and table.drop() to be consistent with table.create()
-    
+
 == 0.5.0 / 2009-09-17
     * Initial public release
