--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
-== 0.5.3
+== 0.5.4
+    * Sub-parts of indices are now correctly added
+    
+== 0.5.3 / 2010-04-19
     * Column types are no longer forced uppercase
         - Fixes ENUM, SET bug where data values were incorrectly uppercased
 
